<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview_podcastplay_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageview_podcastplay_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_nc_first_medieval"
                    android:contentDescription="@string/msg_imageview_podcastplay_bannercontentdescription" />

                <TextView
                    android:id="@+id/textview_podcastplay_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageview_podcastplay_banner"
                    android:layout_alignEnd="@+id/imageview_podcastplay_banner"
                    android:paddingStart="@dimen/mediumPadding"
                    android:paddingEnd="@dimen/mediumPadding"
                    android:background="@color/colorAccent"
                    android:textSize="@dimen/overlineText"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/textview_podcastplay_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/mediumMargin"
                android:layout_marginEnd="@dimen/mediumMargin"
                android:textSize="@dimen/titleText"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/largeMargin"
                android:layout_marginStart="@dimen/mediumMargin"
                android:layout_marginEnd="@dimen/mediumMargin"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/msg_textview_podcastplay_theme"/>

                    <TextView
                        android:id="@+id/textview_podcastplay_theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/msg_textview_podcastplay_duration"/>

                    <TextView
                        android:id="@+id/textview_podcastplay_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/msg_textview_podcastplay_author"/>

                    <TextView
                        android:id="@+id/textview_podcastplay_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/largeMargin"
                android:layout_marginStart="@dimen/mediumMargin"
                android:layout_marginEnd="@dimen/mediumMargin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:text="@string/msg_textview_podcastplay_participants"/>

                <TextView
                    android:id="@+id/textview_podcastplay_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mediumMargin"
                android:layout_marginEnd="@dimen/mediumMargin"
                android:textSize="@dimen/bodyText"
                android:textStyle="bold"
                android:text="@string/msg_texview_podcastplay"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mediumMargin"
                android:layout_marginStart="@dimen/mediumMargin"
                android:layout_marginEnd="@dimen/mediumMargin">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView_podcastplay_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar_podcastplay"
        style="android.support.design.bottomappbar.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorPrimary"
        app:hideOnScroll="true">

    </android.support.design.bottomappbar.BottomAppBar>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_podcastplay_back"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_reply_white_48"
        app:layout_anchor="@id/bottomAppBar_podcastplay"/>

</android.support.design.widget.CoordinatorLayout>